--- a/package.json
+++ b/package.json
@@ -37,6 +37,11 @@
     ]
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.10",
     "@material-ui/core": "^4.7.0",
     "@material-ui/icons": "^4.5.1",
     "@types/jest": "^25.2.3",
@@ -44,6 +49,7 @@
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "axios": "^0.19.0",
+    "bootstrap": "^4.5.0",
     "clsx": "^1.0.4",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
